@@ -1,10 +1,17 @@
+2008-07-23  Matthias Clasen  <mclasen@redhat.com>
+
+	529694 – SELinux context setting support
+
+	* gfileinfo.c: Support setting selinux attributes.
+	Patch by Tomas Bzatek
+
 2008-07-22  Priit Laes <plaes@plaes.org>
 
 	Bug 544140 - fam-helper 64-bit issue?
 
 	* fam/fam-helper.c: Added missing include so compiler doesn't complain.
 
-2008-07-21  Matthias Clasen  <mclasen2redhat.com>
+2008-07-21  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.17.4 ===
 
